# gacha-shop

./: .gitignore  CLAUDE.md  STATE.md  features.json  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: done.md  evening.md  feature.md  morning.md  status.md
.claude/rules/: backend.md  frontend.md
.claude/skills/money-safety/: SKILL.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  constants.py  db.py  deps.py  main.py  models.py  schemas.py  terms.py
apps/api/app/routers/: admin.py  auth.py  draws.py  machines.py  shipments.py  wallet.py  webhooks.py
apps/api/app/services/: admin_service.py  draw_engine.py  odds.py  pg.py  shipping.py  wallet_service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 4d777d0c147c_stock_audits_admin_stock_change_audit.py  bc6a7c07f4ef_initial_schema_users_ledger_payments_.py
apps/api/scripts/: seed_dev.py
apps/api/tests/: conftest.py  test_admin.py  test_draw_engine.py  test_legal.py  test_machines_api.py  test_payments.py  test_shipping.py  test_wallet_api.py
apps/web/: next.config.ts  package.json
apps/web/scripts/: shot375.mjs  verify-spin.mjs  verify-storage.mjs  verify-wallet.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: CapsuleGauge.tsx  MachineCard.tsx  OddsModal.tsx  RarityChip.tsx
apps/web/src/lib/: api.ts  clientApi.ts  haptics.ts  sfx.ts
apps/web/src/stores/: spinStore.ts
docs/: schema.sql  온라인가챠샵_사업계획서.docx
docs/prototype/: gacha-spin-prototype.html
docs/worklog/: 2026-07-17.md  TEMPLATE.md
(+16 files in other folders)
